--- a/Spring-RestTemplate/src/main/resources/templates/student/_form.html
+++ b/Spring-RestTemplate/src/main/resources/templates/student/_form.html
@@ -9,7 +9,7 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<form th:object="${form}" method="post" class="container">
+<form th:object="${form}" method="post">
     <div class="mb-3 mt-3">
         <label class="form-label">Email</label>
         <input th:field="*{email}" class="form-control" placeholder="Enter email">
