--- a/Spring-RestTemplate/src/main/resources/templates/student/index.html
+++ b/Spring-RestTemplate/src/main/resources/templates/student/index.html
@@ -10,8 +10,11 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="container">
     <h2>RESTful Consumer - RestTemplate</h2>
     <div th:replace="~{/student/_form::form}"></div>
-<!--    <div th:replace="~{/student/_table::table}"></div>-->
+    <br>
+    <div th:replace="~{/student/_table::table}"></div>
+</div>
 </body>
 </html>
