--- a/poly/src/main/resources/templates/scope/index.html
+++ b/poly/src/main/resources/templates/scope/index.html
@@ -14,10 +14,10 @@
     <h3>Scopes &amp; Parameter</h3>
     <ul>
         <li>A - Model: [[${a}]]</li>
-        <li>B - Request:</li>
-        <li>C - Session:</li>
-        <li>D - Application:</li>
-        <li>X - Parameter:</li>
+        <li>B - Request: [[${b}]]</li>
+        <li>C - Session: [[${session.c}]]</li>
+        <li>D - Application: [[${application.d}]]</li>
+        <li>X - Parameter: [[${param.x}]]</li>
     </ul>
     <button class="btn btn-secondary"><a style="color: white;text-decoration: none"
                                          href="scope?x=FPT Polytechnic">Poly</a>
