--- a/poly/src/main/resources/templates/scope/student.html
+++ b/poly/src/main/resources/templates/scope/student.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Student</title>
@@ -10,6 +10,18 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-
+<div class="container">
+    <a th:href="@{|student?index=${n-1}|}">Prev</a>
+    [~[[${n+1}]]/4~]
+    <a th:href="@{|student?index=${n+1}|}">Next</a>
+    <hr>
+    <ul th:object="${sv}">
+        <li>Name : [[${sv.name}]]</li>
+        <li>Gender : [[${sv.gender?'Male':'Female'}]]</li>
+        <li>Email : [[${sv.email}]]</li>
+        <li>Mark : [[${sv.marks}]]</li>
+        <li>Result : [[${sv.marks > 5 ? 'Pass': 'Fail'}]]</li>
+    </ul>
+</div>
 </body>
 </html>
