--- a/Utilities-example/src/main/resources/templates/utility.html
+++ b/Utilities-example/src/main/resources/templates/utility.html
@@ -18,6 +18,17 @@
         <li>Number of students : <i th:text="${#lists.size(dssv)}"></i></li>
     </ul>
     <b>Danh sách</b>
+    <ul th:each="sv :${dssv}" th:object="${sv}">
+        <li>
+            Name: <b th:text="*{#strings.capitalizeWords(name)}"></b>
+        </li>
+        <li>
+            Marks: <b th:text="*{#numbers.formatDecimal(marks,0,'COMMA',2,'POINT')}"></b>
+        </li>
+        <li>
+            Number of subjects: <b th:text="*{#arrays.length(subjects)}"></b>
+        </li>
+    </ul>
 </div>
 </body>
 </html>
