--- a/Utilities-example/src/main/resources/templates/utility.html
+++ b/Utilities-example/src/main/resources/templates/utility.html
@@ -26,7 +26,7 @@
             Marks: <b th:text="*{#numbers.formatDecimal(marks,0,'COMMA',2,'POINT')}"></b>
         </li>
         <li>
-            Number of subjects: <b th:text="*{#arrays.length(subjects)}"></b>
+            Number of subjects: <b th:text="*{#arrays.length(subject)}"></b>
         </li>
     </ul>
 </div>
