--- a/DataBinding-Validation/src/main/resources/templates/student2/success.html
+++ b/DataBinding-Validation/src/main/resources/templates/student2/success.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Sucess</title>
 </head>
 <body>
-
+<h3>Result</h3>
+<ul th:object="${student2}">
+    <li>Email address : <i th:text="${student2.email}"></i></li>
+    <li>Full name : <i th:text="${student2.fullname}"></i></li>
+    <li>Average marks : <i th:text="${student2.marks}"></i></li>
+    <li>Gender : <i th:text="${student2.gender}?'Male':'Female'"></i></li>
+    <li>Country : <i th:text="${student2.country}"></i></li>
+</ul>
 </body>
 </html>
