--- a/DataBinding-Validation/src/main/resources/templates/student2/form.html
+++ b/DataBinding-Validation/src/main/resources/templates/student2/form.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Student2</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="container">
     <h3>Validation</h3>
+    <div th:text="${message}"></div>
     <form action="/student2/validation/validate" method="post" th:object="${student2}">
         <div class="mb-3 mt-3">
             <label class="form-label">Email:</label>
@@ -38,6 +44,7 @@
                 <option value="US">United States</option>
                 <option value="CN">China</option>
             </select>
+            <i th:errors="${student2.country}"></i>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
