--- a/DataBinding-Validation/src/main/resources/templates/student2/form.html
+++ b/DataBinding-Validation/src/main/resources/templates/student2/form.html
@@ -8,6 +8,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
             crossorigin="anonymous"></script>
+    <style>
+        .errors{
+            color: red;
+        }
+    </style>
 </head>
 <body>
 <div class="container">
@@ -17,24 +22,24 @@
         <div class="mb-3 mt-3">
             <label class="form-label">Email:</label>
             <input class="form-control" th:field="${student2.email}">
-            <i th:errors="${student2.email}"></i>
+            <i class="errors" th:errors="${student2.email}"></i>
         </div>
         <div class="mb-3">
             <label class="form-label">Full name:</label>
             <input class="form-control" th:field="${student2.fullname}">
-            <i th:errors="${student2.fullname}"></i>
+            <i class="errors" th:errors="${student2.fullname}"></i>
         </div>
         <div class="mb-3 mt-3">
             <label class="form-label">Mark:</label>
             <input class="form-control" th:field="${student2.marks}">
-            <i th:errors="${student2.marks}"></i>
+            <i class="errors" th:errors="${student2.marks}"></i>
 
         </div>
         <div class="mb-3">
             <label class="form-label">Gender:</label>
             <input type="radio" class="form-check-input" th:field="${student2.gender}" th:value="true">Male
             <input type="radio" class="form-check-input" th:field="${student2.gender}" th:value="false">Male
-            <i th:errors="${student2.gender}"></i>
+            <i class="errors" th:errors="${student2.gender}"></i>
         </div>
         <div class="mb-3">
             <label class="form-label">Country:</label>
@@ -44,7 +49,7 @@
                 <option value="US">United States</option>
                 <option value="CN">China</option>
             </select>
-            <i th:errors="${student2.country}"></i>
+            <i class="errors" th:errors="${student2.country}"></i>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
     </form>
